--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1513,3 +1513,10 @@ Granularities},
   year = {2018},
   url = {https://bookdown.org/yihui/rmarkdown},
 }
+
+@book{edgington2007randomization,
+  title={Randomization tests},
+  author={Edgington, Eugene and Onghena, Patrick},
+  year={2007},
+  publisher={CRC press}
+}
