--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -323,11 +323,11 @@ $D(q_1||q_2) := \int^\infty_{-\infty} q_1(x)f(\frac{q_1(x)}{q_2(x)})$ is the KL 
 
 ### Tuning parameter
 
-A tuning parameter specifying the weightage given to the within-facet or between-facet categories can help to balance weightage between designs like \ref{fig:null4by2}(b) and (c). The tuning parameters should be chosen such that $\sum_{i=1}^m \lambda_i = 1$. When $m=2$, following the principle of Gestalt theory, $\lambda = \frac{2}{3} = 0.67$ is chosen to put a relative weightage of $2:1$ for within-facet and between-facet distances. No human experiment is conducted to justify this ratio, however, typically a tuning parameter $\lambda>0.5$ would tend to upweigh the within-facet distances and that with $<0.5$ would upweigh the between-facet distances (refer to the Supplementary section of the paper for more details). For $m = 1$, since there are no conditioning variables or groups, $\lambda = 1$.
+A tuning parameter specifying the weightage given to the within-facet or between-facet categories can help to balance weightage between designs like \ref{fig:null4by2}(b) and (c). The tuning parameters should be chosen such that $\sum_{i=1}^m \lambda_i = 1$. When $m=2$, following the principle of Gestalt theory, $\lambda = \frac{2}{3} = 0.67$ is chosen to put a relative weightage of $2:1$ for within-facet and between-facet distances. No human experiment is conducted to justify this ratio, however, typically a tuning parameter $\lambda>0.5$ would tend to upweigh the within-facet distances and that with $<0.5$ would upweigh the between-facet distances (refer to the Supplementary paper for more details). For $m = 1$, there are no conditioning variables or groups, and hence $\lambda = 1$.
 
 ### Raw distance measure
 
-The raw distance measure, denoted by $wpd_{raw}$, is computed after combining all the weighted distance measures appropriately. First, NQT is performed on the measured variable $v_t$ to obtain $v^*_t$ (_data transformation_). Then, for a fixed harmony pair $(A, B)$, percentiles of $v^*_{jk}$ are computed and stored in $q_{jk}$ (_distribution characterization_). This is repeated for all pairs of categories of the form $(a_{j} b_{k}, a_{j'}b_{k'}): \{a_j: j = 1, 2, \dots, J\}, B = \{ b_k: k = 1, 2, \dots, K\}$. The pairwise distances between pairs $(a_{j} b_{k}, a_{j'}b_{k'})$  denoted by $d_{(jk, j'k')} = JSD(q_{jk}, q_{j'k'})$ is computed (_distance between distributions_). The pairwise distances (_Within-facet and between-facet_) are transformed using a suitable tuning parameter ($0<\lambda<1$) depending on if they are within-facet($d_w$) or between-facets($d_b$) as follows:
+The raw distance measure, denoted by $wpd_{raw}$, is computed after combining all the weighted distance measures appropriately. First, NQT is performed on the measured variable $v_t$ to obtain $v^*_t$ (_data transformation_). Then, for a fixed harmony pair $(A, B)$, percentiles of $v^*_{jk}$ are computed and stored in $q_{jk}$ (_distribution characterization_). This is repeated for all pairs of categories of the form $(a_{j} b_{k}, a_{j'}b_{k'}): \{a_j: j = 1, 2, \dots, J\}, B = \{ b_k: k = 1, 2, \dots, K\}$. The pairwise distances between pairs $(a_{j} b_{k}, a_{j'}b_{k'})$  denoted by $d_{(jk, j'k')} = JSD(q_{jk}, q_{j'k'})$ is computed (_distance between distributions_). The pairwise distances (_Within-facet and between-facet_) are transformed using a suitable _tuning parameter_ ($0<\lambda<1$) depending on if they are within-facet($d_w$) or between-facets($d_b$) as follows:
 \begin{equation}\label{def:raw-wpd}
 d*_{(j,k), (j'k')} =
 \begin{cases}
@@ -342,11 +342,11 @@ d*_{(j,k), (j'k')} =
 
 ### Adjusting for the number of comparisons {#sec:norm-wpd}
 
-Ideally, it is desired that $wpd$ takes a higher value only if there is a significant difference between distributions across categories, and not because the number of categories $J$ or $K$ is high. That is, under designs like $D_{null}$, the distribution of the $wpd$ values should not differ for a different number of categories. Only then the distance measure could be compared across panels with different levels. This calls for an adjusted measure, which normalizes for the different number of comparisons. We denote it by $wpd$. Two approaches for adjusting the number of comparisons are discussed, both of which are substantiated using simulations. The first one defines an adjusted measure $wpd_{perm}$ based on the permutation method to remove the effect of different comparisons. The second approach fits a model to represent the relationship between $wpd_{raw}$ and the number of comparisons and defines the adjusted measure ($wpd_{glm-scaled}$) as the residual from the model.
+Ideally, it is desired that the proposed distance measure takes a higher value only if there is a significant difference between distributions across categories, and not because the number of categories $J$ or $K$ is high. That is, under designs like $D_{null}$, their distribution should not differ for a different number of categories. Only then the distance measure could be compared across panels with different levels. This calls for an adjusted measure, which normalizes for the different number of comparisons. We denote it by $wpd$. Two approaches for adjusting the number of comparisons are discussed, both of which are substantiated using simulations. The first one defines an adjusted measure $wpd_{perm}$ based on the permutation method to remove the effect of different comparisons. The second approach fits a model to represent the relationship between $wpd_{raw}$ and the number of comparisons and defines the adjusted measure ($wpd_{glm}$) as the residual from the model.
 
 _Permutation approach_    
 
-This method is somewhat similar in spirit to bootstrap or permutation tests, where the goal is to test the hypothesis that the groups under study have identical distributions. This method accomplishes a different goal of finding the null distribution for different groups (panels in our case) and standardizing the raw values using that distribution. The values of $wpd_{raw}$ is computed on many ($nperm$) permuted data sets stored in $wpd_{perm-data}$. Then $wpd_{perm}$ is computed as follows:
+This method is somewhat similar in spirit to bootstrap or permutation tests, where the goal is to test the hypothesis that the groups under study have identical distributions. This method accomplishes a different goal of finding the null distribution for different groups (panels in our case) and standardizing the raw values using that distribution. The values of $wpd_{raw}$ is computed on many ($nperm$) permuted data sets and stored in $wpd_{perm-data}$. Then $wpd_{perm}$ is computed as follows:
 
 \begin{align*}
 wpd_{perm} = \frac{(wpd_{raw} - \bar{wpd_{perm-data}})}{sd(wpd_{perm-data})}
@@ -364,7 +364,7 @@ The distribution of $wpd_{glm}$ under $D_{null}$ will have $mean = 0$, since it 
 
 _Combination approach_     
 
-The simulation results (\ref{sec:simulations}) show that the distribution of $wpd_{glm}$ under null is similar for high $nx$ and $nfacet$ (levels higher than $5$) and not so much for lower $nx$ and $nfacet$. Hence, a combination approach is proposed which chooses permutation approach for categories with smaller levels and modeling approach for categories with higher levels. This ensures that the computational load of the permutation approach is alleviated while maintaining similar null distribution across different categories. This approach, however, requires that the adjusted variables from the two approaches are brought to the same scale. We define $wpd_{glm-scaled} = wpd_{glm}*\sigma^2_{perm}/\sigma^2_{glm}$ as the transformed $wpd_{glm}$ with a similar scale as $wpd_{perm}$. The adjusted measure from the combination approach, denoted by $wpd$ is then defined as follows:
+The simulation results (in Section \ref{sec:simulations}) show that the distribution of $wpd_{glm}$ under null is similar for high $nx$ and $nfacet$ (levels higher than $5$) and not so much for lower $nx$ and $nfacet$. Hence, a combination approach is proposed which chooses permutation approach for categories with smaller levels and modeling approach for categories with higher levels. This ensures that the computational load of the permutation approach is alleviated while maintaining similar null distribution across different categories. This approach, however, requires that the adjusted variables from the two approaches are brought to the same scale. We define $wpd_{glm-scaled} = wpd_{glm}*\sigma^2_{perm}/\sigma^2_{glm}$ as the transformed $wpd_{glm}$ with a similar scale as $wpd_{perm}$. The adjusted measure from the combination approach, denoted by $wpd$ is then defined as follows:
 
 \begin{equation}
 wpd =
@@ -516,7 +516,7 @@ wpd_{glm-scaled}             & \text{otherwise}\\
 
 # Ranking and selection of cyclic granularities {#sec:rank-wpd}
 
-A cyclic granularity is referred to as "significant" if there is a significant distributional difference of the measured variable between different categories of the harmony. In this section, a selection criterion to choose significant harmonies is provided, thereby eliminating all harmonies that exhibit complete randomness in the measured variable. The distance measure $wpd$ is used as a test statistic to test the null hypothesis that any given harmony is not significant. We select only those harmonies for which the test fails. The significant harmonies are then ranked basis how well they capture variation in the measured variable. 
+A cyclic granularity is referred to as "significant" if there is a significant distributional difference of the measured variable between different categories of the harmony. In this section, a selection criterion to choose significant harmonies is provided, thereby eliminating all harmonies that exhibit complete randomness in the measured variable. The distance measure $wpd$ is used as a test statistic to test the null hypothesis that no harmony/cyclic granularity is significant. We select only those harmonies/cyclic granularities for which the test fails. They are then ranked basis how well they capture variation in the measured variable. 
 
 <!-- . Randomization tests (permutation tests) generates a random distribution by re-ordering the observed data and allows us to test if the observed data is significantly different from any random distribution.  -->
 <!-- the harmonies are not significant under null hypothesis and then test if our hypotheses are true: -->
@@ -530,7 +530,7 @@ A cyclic granularity is referred to as "significant" if there is a significant d
 
 <!-- Under the null hypothesis, the harmonies are not significant. -->
 
-A threshold and consequently a selection criterion is chosen using the notion of Randomization tests. The data is permuted several times and $wpd$ is computed for each of the permuted data sets to obtain the sampling distribution of $wpd$ under the null hypothesis. If the null hypothesis is true, then $wpd$ obtained from the original data set would be a likely value in the sampling distribution. But in case the null hypothesis is not true, then it is less probable that $wpd$ obtained for the original data will be from the same distribution. This idea is utilized to come up with a threshold for selection, denoted by $wpd_{threshold}$, defined as the $99^{th}$ percentile of the sampling distribution. A harmony is selected if the value of $wpd$ for that harmony is greater than the chosen threshold. The detailed algorithm for choosing a threshold and selection procedure is listed as follows:
+A threshold and consequently a selection criterion is chosen using the notion of Randomization tests (@edgington2007randomization). The data is permuted several times and $wpd$ is computed for each of the permuted data sets to obtain the sampling distribution of $wpd$ under the null hypothesis. If the null hypothesis is true, then $wpd$ obtained from the original data set would be a likely value in the sampling distribution. But in case the null hypothesis is not true, then it is less probable that $wpd$ obtained for the original data will be from the same distribution. This idea is utilized to come up with a threshold for selection, denoted by $wpd_{threshold}$, defined as the $99^{th}$ percentile of the sampling distribution. A harmony is selected if the value of $wpd$ for that harmony is greater than the chosen threshold. The detailed algorithm for choosing a threshold and selection procedure (for two cyclic granularities) is listed as follows:
 
 <!-- The selection criterion is stated as follows: for $(i \in {1, 2, \dots, H_{N_C}})$, select $H_i$ if $wpd_i > wpd_{threshold}$, else reject. -->
 
@@ -546,7 +546,7 @@ A threshold and consequently a selection criterion is chosen using the notion of
 
 4. $wpd$ is computed for the permuted sequence of the data and is represented by $wpd^{A, B}_{1}$.
 
-5.  Steps (3) and (4) are repeated a large number of times $M$ ($M = 200$).
+5.  Steps (3) and (4) are repeated a large number of times $M$ (e.g. $M = 200$).
 
 6. For each permutation, one $wpd^{A, B}_{i}$ is obtained. Define $wpd_{sample} = \{wpd^{A, B}_{1} wpd^{A, B}_{2}, \dots, wpd^{A, B}_{M}\}$.
 
@@ -560,7 +560,7 @@ Similarly, a harmony pair $(A, B)$ could be selected if $wpd^{A, B}_{obs} > wpd_
 
 ## Ranking
 
-The distribution of $wpd$ is expected to be similar for all harmonies under the null hypothesis, since they have been adjusted for different number of categories for the harmonies or underlying distribution of the measured variable. Hence, the values of $wpd$ for different harmonies are comparable and can be used to rank the significant harmonies. A higher value of $wpd$ for a harmony indicates that higher maximum variation in the measured variable is captured through that harmony. Figure \ref{fig:null4by2} presents the results of $wpd$ from the illustrative designs in Section \ref{sec:computation-wpd}. The value of $wpd$ under null design (a) is the least, followed by (b), (c) and (d). This aligns with the principle of $wpd$, which is expected to have lowest value for null designs and highest for designs of the form $D_{var_{all}}$ (d). Moreover, note the relative differences in $wpd$  values between (b) and (c). The value of the tuning parameter $\lambda$ is set to $0.67$, which has resulted in giving more emphasis to differences in x-axis categories. Again consider \ref{fig:onegran-new}(a) and \ref{fig:onegran-new}(b) with a $wpd$ value of 20.5 and 145 respectively. This is because there is more gradual increase across hours of the day than months of the year. If order is not considered, they result in a $wpd$ value of $97.8$ and $161$ respectively, which follows from the fact that if we consider difference between any hours of the day, the maginitude will be much larger than if we consider difference between consecutive categories. Simularly, for \ref{fig:onegran-new}(a) and (b) has $110.79$ and $125.82$ as the $wpd$ values and both are significant. The ranking implies that the distributional differences are more prominent for the second household, as is also seen from the bigger fluctuations in the $90^{th}$ percentile than the first household.
+The distribution of $wpd$ is expected to be similar for all harmonies under the null hypothesis, since they have been adjusted for different number of categories for the harmonies or underlying distribution of the measured variable. Hence, the values of $wpd$ for different harmonies are comparable and can be used to rank the significant harmonies. A higher value of $wpd$ for a harmony indicates that higher maximum variation in the measured variable is captured through that harmony. Figure \ref{fig:null4by2} presents the results of $wpd$ from the illustrative designs in Section \ref{sec:computation-wpd}. The value of $wpd$ under null design (a) is the least, followed by (b), (c) and (d). This aligns with the principle of $wpd$, which is expected to have lowest value for null designs and highest for designs of the form $D_{var_{all}}$ (d). Moreover, note the relative differences in $wpd$  values between (b) and (c). The value of the tuning parameter $\lambda$ is set to $0.67$, which has resulted in giving more emphasis to differences in x-axis categories. Again consider \ref{fig:onegran-new}(a) and \ref{fig:onegran-new}(b) with a $wpd$ value of 20.5 and 145 respectively. This is because there is more gradual increase across hours of the day than months of the year. If order of the categories is not considered, they result in a $wpd$ value of $97.8$ and $161$ respectively, which follows from the fact that if we consider difference between any hours of the day, the magnitude will be much larger than if we consider difference between consecutive categories. Similarly, \ref{fig:onegran-new}(a) and (b) have $wpd$ values of   $110.79$ and $125.82$ respectively. The ranking implies that the distributional differences are more prominent for the second household, as is also seen from the bigger fluctuations in the $90^{th}$ percentile than the first household.
  
 
 <!-- ## Choosing a threshold -->
