--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -623,7 +623,7 @@ The distribution of $wpd$ is expected to be similar for all harmonies under the 
 
 $m=1$  
 
-\noindent Observations are generated from a N(0,1) distribution for each $nx = \{2, 3, 5, 7, 9, 14, 17, 20, 24, 31, 42, 50\}$ to cover a wide range of levels from very low to moderately high. $ntimes = 500$ observations are drawn for each combination of the categories, that is, for a panel with $nx=3$, $500$ observations are simulated for each of the categories. This design corresponds to $D_{null}$ as each combination of categories in a panel are drawn from the same distribution. Furthermore, the data is simulated for each of the categories $nsim=200$ times, so that the distribution of $wpd$ under $D_{null}$ could be observed. The values of $wpd$ is obtained for each of the panels. $wpd_{l, s}$ denotes the value of $wpd$ obtained for the $l^{th}$ panel and $s^{th}$ simulation.
+\noindent Observations are generated from a N(0,1) distribution for a wide range of levels from very low to moderately high. $nx = \{2, 3, 5, 7, 9, 14, 17, 20, 24, 31, 42, 50\}$ is considered. $ntimes = 500$ observations are drawn for each combination of the categories, that is, for a panel with $nx=3$, $500$ observations are simulated for each of the categories. This design corresponds to $D_{null}$ as each combination of categories in a panel are drawn from the same distribution. Furthermore, the data is simulated for each of the categories $nsim=200$ times, so that the distribution of $wpd$ under $D_{null}$ could be observed. The values of $wpd$ is obtained for each of the panels. $wpd_{l, s}$ denotes the value of $wpd$ obtained for the $l^{th}$ panel and $s^{th}$ simulation.
 
 $m=2$  
 \noindent Similarly, observations are generated from a N(0,1) distribution for each combination of $nx$ and $nfacet$ from the following sets: $nx = nfacet = \{2, 3, 5, 7, 14, 20, 31, 50\}$. That is, data is being generated for each of the panels $(2, 2), (2, 3), (2, 5) \dots, (50, 31), (50, 50)$. For each of the $64$ panels, $ntimes = 500$ observations are drawn for each combination of the categories. That is, if we consider a $(2, 2)$ panel, $500$ observations are generated for each of the possible subsets, namely, $\{(1, 1), (1, 2), (2, 1), (2, 2)\}$. 
@@ -631,8 +631,7 @@ $m=2$
 
 \noindent _Results_ 
 
-Figure \ref{fig:raw} shows that both the location and scale of the distributions change across panels. This is not desirable under $D_{null}$ as it would mean comparisons of $wpd$ values is not appropriate across different $nx$ and $nfacet$. \ref{tab:glm-tab} gives the summary of the generalized linear model to capture the relationship between $wpd_{raw}$ and number of comparisons. Thus, the model considered is $wpd_{l,s} = 23.69448+-1.02357*log(nx * nfacet)) + e$. The intercepts are similar independent of the starting distribution (Please refer to supplementary).
-Figure \ref{fig:dist-new-same-scale-link} shows the distribution of $wpd_{perm}$ and $wpd_{glm-scaled}$ in the same scale to show that a combination approach could be used for higher values of levels to alleviate the computational time of permutation approach.
+Figure \ref{fig:raw} shows that both the location and scale of the distributions change across panels. This is not desirable under $D_{null}$ as it would mean comparisons of $wpd$ values is not appropriate across different $nx$ and $nfacet$. Table \ref{tab:glm-tab} gives the summary of the generalized linear model to capture the relationship between $wpd_{raw}$ and number of comparisons. For example, the model considered for $m = 2$ is $wpd_{l,s} = 23.4 - 0.96*log(nx * nfacet)) + e$. The intercepts and slopes are similar independent of the starting distributions (see supplementary paper for details) and hence the coefficients are shown for the case when observations are drawn from a N(0, 1) distribution. Figure \ref{fig:dist-new-same-scale-link} shows the distribution of $wpd_{perm}$ and $wpd_{glm-scaled}$ in the same scale to show that a combination approach could be used for higher values of levels to alleviate the computational time of permutation approach.
 
 ```{r raw, fig.cap = "Distribution of $wpd_{raw}$ is plotted across different $nx$ and $nfacet$ categories under $D_{null}$ through density and rug plots. Both location (blue line) and scale (orange marks) of the distribution shifts for different panels. This is not desirable since under null design, the distribution  is not expected to capture any differences."}
 ```
