--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -676,10 +676,9 @@ Observations are generated from a N(0,1) distribution for each combination of $n
 
 \noindent _Results_  
 
-
-For the first scenario, size of the test is obtained as $0.1$ with $wpd_{threshold99}$ as the threshold.
-This implies that the proportion of times a panel is rejected when it is under $D_{null}$ is $0.1$. The level of significance for each test is 1% (as a result of choosing $99^{th}$ percentile as the threshold) and we have $9$ multiple tests. Hence, it is reasonable
-that the level of significance of the composite tests would be larger than the individual tests. We also compute the proportion of times a panel is rejected when it actually belongs to a non-null design. These proportions constitute to be the estimated size and power of the test. It is found that as we increase from low to high changes from the null distribution, the power increased. The power also increases with increased sample size. The results and graphics are included in details in the Supplementary paper.
+For the first scenario, size of the test is obtained as $0.1$ with $wpd_{threshold99}$ as the threshold. This implies that the proportion of times a panel is rejected when it is under $D_{null}$ is $0.1$. The level of significance for each test is 1% (as a result of choosing $99^{th}$ percentile as the threshold) and we have $9$ multiple tests. Hence, it is reasonable
+that the level of significance of the composite tests would be larger than the individual tests. We also compute the proportion of times a panel is rejected when it actually belongs to a non-null design. These proportions constitute to be the estimated size and power of the test.
+Power can depend on many things like sample size, number of deviations from the null and extent of deviations from the null. It is found that as we increase from low to high changes from the null distribution, the power increased. <!---The power also increases with increased sample size, as is expected.---> The results and graphics are included in details in the Supplementary paper.
 
 ```{r, eval = FALSE}
 all_data <- read_rds("simulations/supplementary/test-hpc/data-agg/all_data.rds")
@@ -742,63 +741,10 @@ Few observations that emphasizes patterns not discernible through (b) includes -
 
 
 ```{r rank-household-mclapply-8}
-elec <- read_rds(here("paper/data/elec_all-8.rds")) %>% 
-  dplyr::filter(date(reading_datetime) >= ymd("20190701"), date(reading_datetime) < ymd("20191231"), meter_id==1) %>% 
-  select(-meter_id) %>% 
-  rename("id" = "household_id",
-         "date_time" = "reading_datetime")
-
-
-
-library(tictoc)
-#tic()
-elec_split = elec %>% group_split(id)
-
-elec_select_harmony = parallel::mclapply(1:8, function(x){
-  
-  data_id <-  elec_split %>% magrittr::extract2(x) %>% 
-    as_tsibble(index = date_time)
-  
-harmonies <- data_id %>%
-  harmony(
-    ugran = "month",
-    filter_in = "wknd_wday",
-    filter_out = c("hhour", "fortnight")
-  )
-
- hakear::select_harmonies(data_id,
-   harmony_tbl = harmonies,
-   response = kwh,
-   nperm = 200,
-   nsamp = 200
- )
-
-}, mc.cores = parallel::detectCores() - 1, mc.preschedule = FALSE, mc.set.seed = FALSE)
-#toc()
 ```
 
 
 ```{r elec_select_harmony-8}
-elec_harmony_all <- elec_select_harmony %>% 
-  bind_rows(.id = "id") %>% 
-  mutate(facet_variable = case_when(
-    facet_variable == "hour_day" ~ "hod" ,
-    facet_variable == "day_month" ~ "dom" ,
-    facet_variable == "day_week" ~ "dow" ,
-    facet_variable == "week_month" ~ "wom" ,
-    facet_variable == "wknd_wday" ~ "wdwnd"
-  )) %>% 
-  mutate(x_variable = case_when(
-    x_variable == "hour_day" ~ "hod" ,
-    x_variable == "day_month" ~ "dom" ,
-    x_variable == "day_week" ~ "dow" ,
-    x_variable == "week_month" ~ "wom" ,
-    x_variable == "wknd_wday" ~ "wdwnd"
-  )) %>% 
-  mutate(id = paste("id", id, sep = " ")) %>% 
-  group_by(id) %>% 
-  mutate(rank = row_number())
-  
 ```
 
 
@@ -841,7 +787,7 @@ The significant granularities across different datasets (individuals/subjects) d
 
 # Acknowledgments {-}
 
-The Australian authors thank the ARC Centre of Excellence for Mathematical and Statistical Frontiers [(ACEMS)](https://acems.org.au/home) for supporting this research. Sayani Gupta was partially funded by [Data61 CSIRO](https://data61.csiro.au/) during her PhD. The Github repository,  [github.com/Sayani07/paper-hakear](https://github.com/Sayani07/paper-gravitas), contains all materials required to reproduce this article and the code is also available online in the supplemental materials. This article was created with R [@R-language], `knitr` [@knitr2015, @R-knitr] and `rmarkdown` [@rmarkdown2018, @R-rmarkdown]. 
+The Australian authors thank the ARC Centre of Excellence for Mathematical and Statistical Frontiers [(ACEMS)](https://acems.org.au/home) for supporting this research. Sayani Gupta was partially funded by [Data61 CSIRO](https://data61.csiro.au/) during her PhD. The Github repository,  [github.com/Sayani07/paper-hakear](https://github.com/Sayani07/paper-gravitas), contains all materials required to reproduce this article and the code is also available online in the supplemental materials. This article was created with R [@R-language], `knitr` [@knitr2015, @R-knitr] and `rmarkdown` [@rmarkdown2018, @R-rmarkdown]. Graphics are produced with @Wickham2009pk.
 
 
 # Supplementary Materials
